añadido de encuentros

--- a/index.html
+++ b/index.html
@@ -198,6 +198,28 @@
             </div>
         </div>
 
+        <!-- SECCIÓN DE ENCUENTROS -->
+        <section class="encuentros-section">
+            <h2><span class="icon">🎬</span> Nuestros Encuentros</h2>
+            <p class="subtitle">Revive los momentos especiales de nuestras reuniones literarias</p>
+
+            <div class="encuentro-video-wrapper">
+                <div class="encuentro-video-container">
+                    <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID" title="Encuentro del Club de Lectura"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+
+                <div class="encuentro-descripcion">
+                    <p><strong>📅 Último Encuentro:</strong> Tertulia sobre "El extraño caso del Dr. Jekyll y Mr. Hyde"
+                    </p>
+                    <p>Disfruta de las reflexiones y análisis más destacados de nuestro club</p>
+                </div>
+            </div>
+        </section>
+
+
         <section class="timeline-section">
             <h2>📜 Línea del Tiempo — El extraño caso del Dr. Jekyll y Mr. Hyde</h2>
             <div class="timeline">
