Se añadio entrevistas, encuentros y se modifico memes

--- a/index.html
+++ b/index.html
@@ -68,24 +68,77 @@
             </div>
         </div>
 
+        <!-- NUEVA SECCIÓN DE ENTREVISTAS -->
+        <div class="entrevistas-section">
+            <h2><span class="icon">🎤</span> Entrevistas</h2>
+            <p class="subtitle">Conversaciones profundas sobre literatura y más</p>
+            <div class="entrevistas-container">
+                <div class="entrevista-item">
+                    <div class="video-wrapper">
+                        <iframe src="https://www.youtube.com/embed/jEe4s-TkPeU" title="Entrevista 1"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <h4>Entrevista 1</h4>
+                </div>
+                <div class="entrevista-item">
+                    <div class="video-wrapper">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID_2" title="Entrevista 2"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <h4>Entrevista 2</h4>
+                </div>
+                <div class="entrevista-item">
+                    <div class="video-wrapper">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID_3" title="Entrevista 3"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <h4>Entrevista 3</h4>
+                </div>
+                <div class="entrevista-item">
+                    <div class="video-wrapper">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID_4" title="Entrevista 4"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <h4>Entrevista 4</h4>
+                </div>
+                <div class="entrevista-item">
+                    <div class="video-wrapper">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID_5" title="Entrevista 5"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <h4>Entrevista 5</h4>
+                </div>
+            </div>
+        </div>
+
         <!-- Sección de Galería de Memes -->
         <div class="gallery-section">
             <h2><span class="icon">😄</span> Galería de Memes Literarios</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="RUTA_IMAGEN_1.jpg" alt="Meme literario 1">
+                    <img src="meme1.jpeg" alt="Meme literario 1">
                     <p>Descripción del meme 1</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="RUTA_IMAGEN_2.jpg" alt="Meme literario 2">
+                    <img src="meme2.jpeg" alt="Meme literario 2">
                     <p>Descripción del meme 2</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="RUTA_IMAGEN_3.jpg" alt="Meme literario 3">
+                    <img src="meme3.jpeg" alt="Meme literario 3">
                     <p>Descripción del meme 3</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="RUTA_IMAGEN_4.jpg" alt="Meme literario 4">
+                    <img src="meme4.jpeg" alt="Meme literario 4">
                     <p>Descripción del meme 4</p>
                 </div>
             </div>
@@ -198,23 +251,30 @@
             </div>
         </div>
 
-        <!-- SECCIÓN DE ENCUENTROS -->
+        <!-- SECCIÓN DE ENCUENTROS (MODIFICADA CON 2 VIDEOS) -->
         <section class="encuentros-section">
             <h2><span class="icon">🎬</span> Nuestros Encuentros</h2>
             <p class="subtitle">Revive los momentos especiales de nuestras reuniones literarias</p>
 
-            <div class="encuentro-video-wrapper">
-                <div class="encuentro-video-container">
-                    <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID" title="Encuentro del Club de Lectura"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen>
-                    </iframe>
+            <div class="encuentros-videos-grid">
+                <div class="encuentro-video-wrapper">
+                    <div class="encuentro-video-container">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ENCUENTRO_1"
+                            title="Encuentro del Club de Lectura 1"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
 
-                <div class="encuentro-descripcion">
-                    <p><strong>📅 Último Encuentro:</strong> Tertulia sobre "El extraño caso del Dr. Jekyll y Mr. Hyde"
-                    </p>
-                    <p>Disfruta de las reflexiones y análisis más destacados de nuestro club</p>
+                <div class="encuentro-video-wrapper">
+                    <div class="encuentro-video-container">
+                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ENCUENTRO_2"
+                            title="Encuentro del Club de Lectura 2"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </section>
