--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="entrevista-item">
                     <div class="video-wrapper">
-                        <iframe src="https://www.youtube.com/embed/TU_VIDEO_ID_2" title="Entrevista 2"
+                        <iframe src="https://www.youtube.com/embed/U48KG_8BPKw" title="Entrevista 2"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen>
                         </iframe>
